push revisi apk menggunakan room

--- a/Pertemuan 6/NugasYukRoom/app/src/main/res/layout/activity_add_task.xml
+++ b/Pertemuan 6/NugasYukRoom/app/src/main/res/layout/activity_add_task.xml
@@ -7,112 +7,153 @@
     tools:context=".AddTaskActivity">
 
     <LinearLayout
+        android:id="@+id/LayoutToolBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp"
-        android:orientation="vertical">
+        android:layout_height="60dp"
+        android:background="@color/soft_orange"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/nama_tugas"
-                android:textSize="20sp"/>
-
-            <EditText
-                android:id="@+id/Add_Nama"
-                android:layout_width="400dp"
-                android:layout_height="40dp"
-                android:background="#FCF086"
-                android:layout_marginTop="40dp"/>
-
-        </RelativeLayout>
-
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginBottom="20dp">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="@string/tanggal_pengerjaan"-->
-<!--                android:textSize="20sp"/>-->
-
-<!--            -->
-
-<!--        </RelativeLayout>-->
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/deadline"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="20sp"/>
-
-            <EditText
-                android:id="@+id/Add_Deadline"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:layout_width="400dp"
-                android:layout_height="40dp"
-                android:background="#FCF086"
-                android:layout_marginTop="40dp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/note"
-                android:textSize="20sp"/>
-
-            <EditText
-                android:id="@+id/Add_Note"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:background="#FCF086"
-                android:layout_marginTop="40dp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/logoTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
+            android:layout_gravity="start"
+            android:layout_marginStart="210dp"
+            android:layout_marginLeft="200dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/logo_putih" />
 
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp">
+
+
+            <!--        <RelativeLayout-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_marginBottom="20dp">-->
+
+            <!--            <TextView-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="@string/tanggal_pengerjaan"-->
+            <!--                android:textSize="20sp"/>-->
+
+            <!--            -->
+
+            <!--        </RelativeLayout>-->
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nama_tugas"
+                    android:textSize="17dp" />
+
+                <EditText
+                    android:id="@+id/Add_Nama"
+                    android:layout_width="400dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="40dp"
+                    android:background="#FCF086"
+                    android:hint="@string/input_nama_tugas"
+                    android:textSize="15dp"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/deadline"
+                    android:textColor="@color/black"
+                    android:textSize="17dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/Add_Deadline"
+                    android:layout_width="400dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="40dp"
+                    android:background="#FCF086"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:hint="@string/input_tgl"
+                    android:textSize="15dp"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/note"
+                    android:textSize="17dp" />
+
+                <EditText
+                    android:id="@+id/Add_Note"
+                    android:layout_width="400dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="40dp"
+                    android:background="#FCF086"
+                    android:hint="@string/input_note"
+                    android:textSize="15dp"/>
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:layout_marginStart="100dp">
+                android:layout_marginBottom="20dp">
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/addTask"
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:background="@color/soft_orange"
-                    android:text="@string/tambah">
-                </androidx.appcompat.widget.AppCompatButton>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                </RelativeLayout>
             </RelativeLayout>
-        </RelativeLayout>
-    </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/addTask"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/soft_orange"
+                android:text="@string/tambah">
+            </androidx.appcompat.widget.AppCompatButton>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
