--- a/Pertemuan 6/NugasYukRoom/app/src/main/res/layout/activity_main.xml
+++ b/Pertemuan 6/NugasYukRoom/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,8 @@
             android:orientation="horizontal"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
@@ -29,15 +31,14 @@
                 android:layout_height="30dp"
                 android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_menu"
-                app:tint="@color/white"
-                />
+                app:tint="@color/white" />
 
             <ImageView
                 android:id="@+id/logoTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="200dp"
                 android:layout_gravity="start"
+                android:layout_marginStart="200dp"
                 android:layout_marginLeft="200dp"
                 android:contentDescription="@string/app_name"
                 android:src="@drawable/logo_putih" />
